<resources>
    <string name="app_name">Explore</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search TourPackage…</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_tour_read_reviews">Read reviews</string>
    <string name="button_tour_write_review">Write a review</string>
    <string name="tab_tour_tours">Tours</string>
    <string name="tab_tour_reviews">Reviews</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Explore</string>
    <string name="nav_header_subtitle">explore@explore.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile_users">Profile/Users</string>
    <string name="users">Users</string>
    <string name="textEdit_reviewnew_title">Title</string>
    <string name="textEdit_reviewnew_message">Your Message</string>
    <string name="button_reviewnew_submitreview">Submit</string>
    <string name="text_reviewnew_ratingtext_5_star">Awesome. I love it</string>
    <string name="text_reviewnew_ratingtext_1_star">Very bad</string>
    <string name="text_reviewnew_ratingtext_2_star">Need some improvement</string>
    <string name="text_reviewnew_ratingtext_3_star">Good</string>
    <string name="text_reviewnew_ratingtext_4_star">Great</string>
    <string name="view_pager_tour_tour_tab_title">Tours</string>
    <string name="view_pager_tour_review_tab_title">Reviews</string>
    <string name="view_pager_tour_description_tab_title">Description</string>
    <string name="view_pager_users_tab_title">Users</string>
    <string name="view_pager_profile_tab_title">profile</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="login_title">Welcome To Explore</string>
    <string name="text_input_login_fragment_username_input">Username</string>
    <string name="text_input_login_fragment_password_input">Password</string>
    <string name="button_login_fragment_login">Login</string>
    <string name="login_empty_message">Email and Password can\'t be blank</string>
    <string name="not_valid_email_format_error">Enter a valid email address</string>
    <string name="login_fragment_title">Login To Explore</string>
    <string name="reviewnew_fragment_title">Review Your TourPackage</string>
    <string name="user_fragment_title">Profile / Users</string>
    <string name="tourpackage_fragment_title">Tour Package</string>
    <string name="Google_api_key">AIzaSyBbDEqUxFrTYXE7CMX4JFbJjhqUcrk--Kw</string>
    <string name="label_tourpackage_description">Description:</string>
    <string name="label_tourpackage_region">Region:</string>
    <string name="label_tourpackage_rating">Rating:</string>
</resources>
