<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    android:orientation="vertical"
    tools:context=".features.reviewnew.ReviewNewFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:hintAnimationEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInput_reviewnew_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/textEdit_reviewnew_title"
            android:inputType="text"
            app:errorEnabled="true">

        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>

    <RatingBar
        android:id="@+id/ratingBar_reviewnew_rating"
        style="?android:attr/ratingBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:numStars="5"
        android:rating="5"
        android:stepSize="1" />

    <TextView
        android:id="@+id/text_reviewnew_ratingdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/text_reviewnew_ratingtext_5_star"
        android:textSize="16sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:hintAnimationEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:breakStrategy="balanced"
            android:fitsSystemWindows="true"
            android:gravity="top"
            android:hint="@string/textEdit_reviewnew_message"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:singleLine="false" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/button_reviewnew_submitreview"
        android:textColor="#fff" />
</LinearLayout>